# CookieCutter_template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: dockerfile  makefile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/src/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
